# snakelib

./: README.md  todo.txt
doc/: README.md  eels.md
gait_control/: CMakeLists.txt  package.xml  setup.py
gait_control/launch/: simulation.launch  snake.launch  snake_single.launch
gait_control/nodes/: controller.py
hebi_interface/: CMakeLists.txt  package.xml
hebi_interface/data/: RSnakemoduleOrder.txt  ReUmoduleOrder.txt  SEAmoduleOrder.txt
hebi_interface/nodes/: hebi_node.py
hebi_interface/scripts/: parse_log.py
human_operator/: CMakeLists.txt  package.xml
human_operator/nodes/: keyboard_node.py
model/: CMakeLists.txt  REU_snake.urdf  package.xml
model/RSnake/: RSnake.urdf
param/: CMakeLists.txt  package.xml
pybullet_gui/: CMakeLists.txt  package.xml
snake_msgs/: CMakeLists.txt  package.xml
snakelib_bullet/: CMakeLists.txt  package.xml  setup.py
snakelib_camera/: CMakeLists.txt  README.md  package.xml  setup.py
snakelib_control/: CMakeLists.txt  README.md  package.xml  setup.py
snakelib_description/: CMakeLists.txt  package.xml
snakelib_gui/: CMakeLists.txt  package.xml  setup.py
snakelib_gui/launch/: snakelib_gui.launch
snakelib_gui/nodes/: SnakeLib_GUI
snakelib_gui/param/: gui.yaml
snakelib_gui/rviz/: cam.rviz  gui.rviz
snakelib_gui/src/snakelib_gui/: gui.py
snakelib_hebi/: CMakeLists.txt  package.xml  setup.py
snakelib_msgs/: CMakeLists.txt  package.xml
snakelib_terrain/: CMakeLists.txt  package.xml
snakelib_test/: CMakeLists.txt  package.xml  setup.py
to_be_organized/: snake_state.launch
(+140 files in other folders)
